fix css image issue along with addition to overflow scroll

--- a/src/App.css
+++ b/src/App.css
@@ -242,6 +242,8 @@ body {
   /* grid-gap: 10px;  */
   /* display: flex;
   flex-direction: column; */
+  list-style-type: none;
+  overflow: scroll;
 }
 
 .zones-container h2 {
@@ -253,7 +255,7 @@ body {
 .zones-container .completed-zone {
   cursor: pointer;
   border-radius: 15px;
-  background-size: cover;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
@@ -262,14 +264,13 @@ body {
   transition: all .5s ease-in;
 }
 
-.zones-container .test:hover {
+.zones-container .completed-zone:hover {
   opacity: 0.7;
   transform: scale(0.98);
 }
 
 .Barcelona {
   background: url('./img/barcelona.jpg');
-  /* background-size: contain; */
 }
 
 .BlueLagoon {
